# react-native-external-scanner

./: NitroExternalScanner.podspec  README.md  nitro.json  package-lock.json  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
android/src/main/cpp/: HybridExternalScanner_android.cpp  HybridExternalScanner_android.hpp  cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/externalscanner/: ExternalScannerJNI.kt  ExternalScannerUtil.kt  NitroExternalScannerPackage.kt
cpp/: HybridExternalScanner.cpp  HybridExternalScanner.hpp  HybridExternalScanner_ios.cpp  HybridExternalScanner_ios.hpp
ios/: Bridge.h  ExternalScannerObserver.h  ExternalScannerObserver.mm  HybridExternalScannerFactory.mm
src/: hooks.ts  index.ts
src/specs/: ExternalScanner.nitro.ts
